DHFPROD-4186: Support for XML source data in Mapping and bug fixes DHFPROD-4186: Adding the missing finally block (+1 squashed commit) Squashed commits: [38748730d] DHFPROD-4186: Support for XML source data in Mapping and bug fixes DHFPROD-4186: Fixed namespace issue for array of nodes in an XML parentNode (+1 squashed commit) Squashed commits: [c622b4064] DHFPROD-4186: Support for XML source data in Mapping and few bug fixes DHFPROD-4186: Fixing few bugs in rendering XML data (+1 squashed commit) Squashed commits: [bfee0ee3a] DHFPROD-4186: Support for XML source data in Mapping DHFPROD-4186: Updating test/code with review comments (+1 squashed commit) Squashed commits: [b79b67329] DHFPROD-4186: Support for XML source data in Mapping DHFPROD-4186: Adding unit test for source data (+2 squashed commits) Squashed commits: [4eced1dd4] DHFPROD-4186: Additional changes covering few edge cases in XML data [48304639b] DHFPROD-4186: Added support for XML data in Mapping source table

--- a/one-ui/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
+++ b/one-ui/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
@@ -173,6 +173,15 @@ hr {
     border: none;
     color: #7F86B5;
 }
+
+.namespace{
+    color: #5B69AF;
+    cursor: pointer;
+}
+
+.toolTipForValues{
+    cursor: pointer;
+}
 .listIcon{
     background: transparent;
     border: none;
